@@ -1,3 +1,13 @@
+clasp 3.1.5: Friday, 5th August 2016 (updated: 11th August 2016)
+  * fixed: projective enumeration failed to work with option "--no-lookback"
+  * fixed: invalid models in parallel disjunctive solving due to unsynchronized simplifications
+  * fixed: Json output sometimes failed to report correct number of optimal models
+  * fixed: SAT-frontend must retain pure literals for cautious/brave reasoning
+  * fixed: ClaspFacade::start() sometimes failed to reset SharedContext  
+  * fixed: Sat-Preprocessor failed to propagate resolution of empty clause
+  * fixed: simplifications after end of incremental step not always propagated to all threads
+  * fixed too strong assertion in eq-preprocessor
+
 clasp 3.1.4: Thursday, 10th December 2015
   * fixed: "--pre" failed to handle choice/disjunctive heads defined by extended bodies
   * fixed: "--backprop" failed to backpropagte certain constraints when used with "--eq=0"
